--- a/src/main/resources/kickstart.cfg
+++ b/src/main/resources/kickstart.cfg
@@ -1,7 +1,7 @@
 accepteula
 install --firstdisk --overwritevmfs
 rootpw ***REMOVED***
-network --bootproto=static --device=vmnic0 --ip=10.100.208.29 --gateway=10.100.208.1 --netmask=255.255.254.0 --hostname=gavin-test --nameserver=10.100.20.11,10.100.20.12
+network --bootproto=static --device=vmnic0 --ip=10.100.200.99 --gateway=10.100.200.1 --netmask=255.255.248.0 --hostname=gavin-test --nameserver=10.100.20.11,10.100.20.12
 reboot
 
 %firstboot --interpreter=busybox
@@ -16,6 +16,7 @@ vim-cmd hostsvc/start_esx_shell
 
 esxcli system maintenanceMode set -e true
 esxcli software vib install -v http://pxeboot.infinio.com/vibs/esx-tools-for-esxi-9.7.0-0.0.00000.i386.vib -f
+esxcli software vib install -v http://pxeboot.infinio.com/vibs/esxi-mac-learning-dvfilter/vmware-esx-dvfilter-maclearn-1.0.vib -f
 
 esxcli system shutdown reboot -r "rebootingAfterHostConfigurations"
 
