Add IP into kickstart template.

--- a/src/main/resources/kickstart.cfg
+++ b/src/main/resources/kickstart.cfg
@@ -1,7 +1,7 @@
 accepteula
 install --firstdisk --overwritevmfs
 rootpw ***REMOVED***
-network --bootproto=static --device=vmnic0 --ip=10.100.200.99 --gateway=10.100.200.1 --netmask=255.255.248.0 --hostname=gavin-test --nameserver=10.100.20.11,10.100.20.12
+network --bootproto=static --device=vmnic0 --ip={{ip}} --gateway=10.100.200.1 --netmask=255.255.248.0 --hostname={{hostname}} --nameserver=10.100.20.11,10.100.20.12
 reboot
 
 %firstboot --interpreter=busybox
