Add parameterization of netmask, hostname, and gateway.

--- a/src/main/resources/kickstart.cfg
+++ b/src/main/resources/kickstart.cfg
@@ -1,7 +1,7 @@
 accepteula
 install --firstdisk --overwritevmfs
 rootpw {{password}}
-network --bootproto=static --device=vmnic0 --ip={{ip}} --gateway=10.100.200.1 --netmask=255.255.248.0 --hostname={{hostname}} --nameserver=10.100.20.11,10.100.20.12
+network --bootproto=static --device=vmnic0 --ip={{ip}} --gateway={{gateway}} --netmask={{netmask}} --hostname={{hostname}} --nameserver=10.100.20.11,10.100.20.12
 reboot
 
 %firstboot --interpreter=busybox
