--- a/src/main/resources/kickstart.cfg
+++ b/src/main/resources/kickstart.cfg
@@ -15,8 +15,8 @@ vim-cmd hostsvc/enable_esx_shell
 vim-cmd hostsvc/start_esx_shell
 
 esxcli system maintenanceMode set -e true
-esxcli software vib install -v http://pxeboot.infinio.com/vibs/esx-tools-for-esxi-9.7.0-0.0.00000.i386.vib -f
-esxcli software vib install -v http://pxeboot.infinio.com/vibs/esxi-mac-learning-dvfilter/vmware-esx-dvfilter-maclearn-1.0.vib -f
+esxcli software vib install -v {{pxeUrl}}/vibs/esx-tools-for-esxi-9.7.0-0.0.00000.i386.vib -f
+esxcli software vib install -v {{pxeUrl}}/vibs/esxi-mac-learning-dvfilter/vmware-esx-dvfilter-maclearn-1.0.vib -f
 
 esxcli system shutdown reboot -r "rebootingAfterHostConfigurations"
 
