--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
 pxe.url=http://pxeboot.infinio.com
