--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
 
 pxe.url=http://pxeboot.infinio.com
-pxeasy.db.file=~/pxeasy.db
+pxeasy.jdbc.url=jdbc:h2:file:~/pxeasy.db
